[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/ui_components/scripts/container_window_ui.gd" type="Script" id=1]
[ext_resource path="res://ui/ui_components/inventory_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/ui_components/sprite/bag_icon.png" type="Texture" id=3]
[ext_resource path="res://entities/interactable_objects/container/sprites/chest_02.png" type="Texture" id=4]
[ext_resource path="res://ui/ui_components/sprite/close_x.png" type="Texture" id=5]

[node name="ContainerWindow" type="Node2D"]
pause_mode = 2
position = Vector2( -310, -187 )
script = ExtResource( 1 )

[node name="user_inventory" parent="." instance=ExtResource( 2 )]

[node name="target_inventory" parent="." instance=ExtResource( 2 )]
margin_left = 322.0
margin_right = 620.0
margin_bottom = 386.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 11.0
margin_top = 4.0
margin_right = 43.0
margin_bottom = 36.0
texture = ExtResource( 3 )

[node name="chest_02" type="TextureRect" parent="."]
margin_left = 338.0
margin_top = 10.0
margin_right = 362.0
margin_bottom = 41.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 266.0
margin_top = 15.0
margin_right = 282.0
margin_bottom = 31.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
[connection signal="slot_clicked" from="user_inventory" to="." method="_on_user_inventory_slot_clicked"]
[connection signal="slot_clicked" from="target_inventory" to="." method="_on_target_inventory_slot_clicked"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
